--- a/register.html
+++ b/register.html
@@ -12,8 +12,8 @@
             <form method="post" action="php/register.php">
                 <input type="text" name="fn" placeholder="Your Name" size="35">
                 <input type="email" name="email" placeholder="Email" size="35">
-                <input type="password" name="pw1" placeholder="Type Password" size="35">
-                <input type="password" name="pw2" placeholder="Confirm Password" size="35">
+                <input type="password" name="pw" placeholder="Type Password" size="35">
+                <input type="password" name="pw2" placeholder="confirm password" size="35">
                 <input type="submit" name="sm" value="Register">
             </form>
             <span>Already a member ?</span><a href="index.html">Login </a>
